RESOLVED FIXED 167617
[WebRTC] getStats does not support legacy callback
https://bugs.webkit.org/show_bug.cgi?id=167617
Summary [WebRTC] getStats does not support legacy callback
youenn fablet
Reported 2017-01-30 17:26:25 PST
[WebRTC] getStats does not support legacy callback
Attachments
Patch (23.74 KB, patch)
2017-01-30 17:27 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-01-30 17:27:40 PST
youenn fablet
Comment 2 2017-01-30 17:28:47 PST
Comment on attachment 300167 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300167&action=review > LayoutTests/fast/mediastream/RTCPeerConnection-js-built-ins-check-this-expected.txt:-11 > -PASS promise RTCPeerConnection.prototype.getStats.call({}, null) rejected with TypeError: Function should be called on an RTCPeerConnection I did not change this test as I propose to replace it by another one in bug 167571
WebKit Commit Bot
Comment 3 2017-01-30 20:35:50 PST
Comment on attachment 300167 [details] Patch Clearing flags on attachment: 300167 Committed r211404: <http://trac.webkit.org/changeset/211404>
WebKit Commit Bot
Comment 4 2017-01-30 20:35:55 PST
All reviewed patches have been landed. Closing bug.
Adam Bergkvist
Comment 5 2017-02-09 07:56:29 PST
But getStats *is* listed in the Legacy Interface Extensions section [1]. [1] https://w3c.github.io/webrtc-pc/archives/20161219/webrtc.html#legacy-interface-extensions
Adam Bergkvist
Comment 6 2017-02-10 00:03:13 PST
Please disregard from my last comment.
Note You need to log in before you can comment on or make changes to this bug.