[WebRTC] getStats does not support legacy callback https://bugs.webkit.org/show_bug.cgi?id=167617

Patch by Youenn Fablet <youenn@apple.com> on 2017-01-30
Reviewed by Alex Christensen.

Source/WebCore:

Covered by updated tests.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::getStats):
(WebCore::RTCPeerConnection::privateGetStats): Deleted.
* Modules/mediastream/RTCPeerConnection.h:
* Modules/mediastream/RTCPeerConnection.idl:
* Modules/mediastream/RTCPeerConnection.js:
(addIceCandidate):
(getStats): Deleted.

LayoutTests:

* fast/mediastream/RTCPeerConnection-js-built-ins-check-this-expected.txt:
* fast/mediastream/RTCPeerConnection-overloaded-operations-params-expected.txt:
* fast/mediastream/RTCPeerConnection-overloaded-operations-params.html:
* fast/mediastream/RTCPeerConnection-stats.html:
* fast/mediastream/RTCPeerConnection-statsSelector.html:

Canonical link: https://commits.webkit.org/184644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211404 268f45cc-cd09-0410-ab3c-d52691b4dbfc